--- a/client/src/Create.css
+++ b/client/src/Create.css
@@ -10,6 +10,7 @@
     margin: auto;
     position: flex;
     flex-direction: column;
+    border-color: rgba(100, 100, 100, 0.521);
 }
 
 #createForm input{
@@ -18,6 +19,7 @@
     margin: 2px;
     border: none;
     border-bottom: 2px solid black;
+    border-bottom-color: rgba(100, 100, 100, 0.521);;
     width: 60vw;
 }
 
